# Aurora-Sound

./: .env.example  .gitignore  README.md  docker-compose.yml  install-backend.bat  render.yaml  start-all.bat  start-backend.bat  start-frontend.bat
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes_generate.py  routes_tracks.py
backend/app/core/: auth.py  config.py  database.py  errors.py
backend/app/llm/: client.py  orchestrator.py  prompts.py
backend/app/models/: generation.py  track.py
backend/app/music/: stable_audio_client.py
backend/app/schemas/: generation.py  llm.py  track.py
backend/app/services/: generation_service.py  pipeline.py
backend/app/soundscape/: engine.py  presets.py
backend/app/storage/: local.py
backend/app/workers/: inline.py  tasks.py
backend/assets/soundscape/: README.md
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/generate/ambient/: page.tsx
frontend/components/auth/: AuthGate.tsx
frontend/components/layout/: AppShell.tsx
frontend/components/ui/: Field.tsx  GeneratePanel.tsx
frontend/features/emotion-map/: EmotionMap.tsx
frontend/features/generation/: useSubmitGeneration.ts
frontend/hooks/: useGenerationPolling.ts
frontend/i18n/: i18n.tsx
frontend/player/: PlayerDock.tsx
frontend/services/: api.ts
frontend/store/: generation-store.ts  player-store.ts
scripts/: setup-backend.ps1  start-all-local.ps1  start-backend.ps1  start-frontend.ps1
(+5 files in other folders)
