[project]
name = "aurora-sound-backend"
version = "0.1.0"
description = "AI music and ambient sound generation backend"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
worker = ["dramatiq[redis]>=1.17.0"]
audio = ["librosa>=0.10.2", "numpy>=1.26.0", "scipy>=1.13.0"]
dev = ["ruff>=0.6.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
